--- a/src/gui/Main.fxml
+++ b/src/gui/Main.fxml
@@ -28,7 +28,7 @@
           	<RadioMenuItem fx:id="run" toggleGroup="$OperationMode" Selected="true" mnemonicParsing="false" text="Run" />
           	<RadioMenuItem fx:id="debug" toggleGroup="$OperationMode"  mnemonicParsing="false" text="Debug" />
           	<SeparatorMenuItem mnemonicParsing="false" />
-          	<MenuItem mnemonicParsing="false" onAction="#checkGrammar" text="Check Grammar" />
+          	<MenuItem mnemonicParsing="false" onAction="#checkGrammar" text="Check Syntax" />
           	<MenuItem mnemonicParsing="false" onAction="#termination" text="Termination Analysis" />
           	<MenuItem mnemonicParsing="false" onAction="#verification" text="Assertions Analysis" />
             </items>
@@ -60,7 +60,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
             <items>
-             <MenuItem fx:id="helpMe" mnemonicParsing="false" onAction="#help" text="About TAP"/>
+             <MenuItem fx:id="helpMe" mnemonicParsing="false" onAction="#help" text="About PROPER"/>
             </items>
           </Menu>
         </menus>
@@ -87,10 +87,10 @@
                            <font>
                               <Font size="15.0" />
                            </font></Text>
-	                 <Label layoutX="40.0" layoutY="60.0" text="Depth :"/>
-	                 <TextField fx:id="depth" text="12" layoutX="89.0" layoutY="56.0" PrefWidth="80"/>   
-	                 <Label layoutX="30.0" layoutY="100.0" text="Property :"/>
-	                 <TextField fx:id="property" layoutX="89.0" layoutY="96.0" PrefWidth="80"/>            
+	                 <Label layoutX="43.0" layoutY="60.0" text="Depth :"/>
+	                 <TextField fx:id="depth" text="12" layoutX="92.0" layoutY="56.0" PrefWidth="80"/>   
+	                 <Label layoutX="30.0" layoutY="100.0" text="Assertion :"/>
+	                 <TextField fx:id="property" layoutX="92.0" layoutY="96.0" PrefWidth="80"/>            
                      </children>
                   </AnchorPane>
                </items>
